fixed link contrast and compressed images

--- a/src/App.css
+++ b/src/App.css
@@ -457,6 +457,7 @@ h3 {
 a {
   display: block;
   padding: 5px;
+  color: #000060;
 }
 
 .test-credentails {
